--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,14 +1,24 @@
+fifth-place:
+- name: Gwangu Institue of Technology (GIST)
+  role: Researcher for GIST technology institue
+  date: 2019. SEP - Present
+
+forth-place:
+- name: Korea Advanced Institute of Science and Technology
+  role: Researcher 
+  date: 2019. JUN - SEP
+
 third-place:
-- name: RIDI
-  role: Team Manager of UX Design, Digital Product Designer
-  date: 2015. JUN - Present
+- name: Fitcare
+  role: Prototype application developer (Android)
+  date: 2019. MAR - JUN
 
 second-place:
-- name: 코딩하는 디자이너
-  role: Co-founder, Branding · UI Designer
-  date: 2014. MAR - 2015. NOV
+- name: Gwangu Institue of Technology (GIST)
+  role: Earth & Envrionmental Engineering (M.S)
+  date: 2017. MAR - 2019. MAR
 
 first-place:
-- name: QUOIN
-  role: GUI Designer
-  date: 2014. MAR - 2015. MAR
+- name: Ewha womans university
+  role: Environmental Engineering (B.S)
+  date: 2014. MAR - 2017. MAR
