--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,18 @@
+
+Seventh-place:
+- name: University of Seoul
+  role: Research Scientist, Water resource management Lab
+  date: 2021. JAN - Present
+
+Sixth-place:
+- name: Polyscape
+  role: Software & IoT developer
+  date: 2020. JAN - JUN
+
 fifth-place:
 - name: Gwangu Institute of Science and Technology (GIST)
   role: Researcher for GIST technology institue
-  date: 2019. SEP - Present
+  date: 2019. SEP - DEC
 
 forth-place:
 - name: Korea Advanced Institute of Science and Technology (KAIST)
