--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,14 +1,23 @@
 
-fifth-place:
+seventh-place:
 - name: University of Seoul
   role: Research Scientist, Water resource management Lab
   date: 2021. JAN - Present
 
-forth-place:
+sixth-place:
 - name: Polyscape
   role: Software & IoT developer
   date: 2020. JAN - JUN
+  
+fifth-place:
+- name: Gwangu Institute of Science and Technology (GIST)
+  role: Researcher for GIST technology institue
+  date: 2019. SEP - DEC
 
+forth-place:
+- name: Korea Advanced Institute of Science and Technology (KAIST)
+  role: Researcher 
+  date: 2019. JUN - SEP
 
 third-place:
 - name: Fitcare
